# vibe

./: .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md  SPECIFICATION.md  vibe.c  vibe.h  vibe.pc.in  vibe_parser_tool  vibe_parser_tool.c
.github/workflows/: ci.yml  release.yml
bench/: .gitignore  README.md  bench.c
bindings/: .gitignore  README.md  run_all.sh  sample.vibe
bindings/chicken/: vibe.scm
bindings/cpp/: vibe.cpp
bindings/crystal/: vibe.cr
bindings/csharp/: vibe.cs
bindings/d/: vibe.d
bindings/go/: vibe.go
bindings/guile/: vibe.scm
bindings/haskell/: vibe.hs
bindings/java/: Vibe.java
bindings/julia/: vibe.jl
bindings/kotlin/: VibeKt.kt
bindings/lua/: vibe.lua
bindings/native/: .gitignore  PUBLISHING.md  README.md  run_native.sh  vendor.sh
bindings/native/cpp/: test.cpp  vibe.hpp
bindings/native/python/: MANIFEST.in  README.md  pyproject.toml  setup.py  test.py  vibe.py  vibemodule.c
bindings/native/rust/: Cargo.toml  README.md  build.rs
bindings/native/rust/src/: lib.rs  main.rs
bindings/nim/: vibe.nim
bindings/node/: vibe.mjs
bindings/ocaml/: vibe.ml
bindings/perl/: vibe.pl
bindings/php/: vibe.php
bindings/python/: vibe.py
bindings/racket/: vibe.rkt
bindings/ruby/: vibe.rb
bindings/rust/: vibe.rs
bindings/swift/: module.modulemap  vibe.swift
bindings/tcl/: vibe.tcl
bindings/wasm/: build.sh  test.mjs
bindings/zig/: vibe.zig
docs/: API.md  MANIFESTO.md  Stability_Paradox.html  Stability_Paradox.md  index.html  manifesto.html  specification.html
examples/: README.md  invalid_array_with_objects.vibe  invalid_nested_arrays.vibe
tests/: test.c  tool_test.sh
tests/conformance/: README.md  run.c
tools/: gen_docs.py  vibe-tool.c  vibe.c
(+63 files in other folders)
