[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-lang"
version = "1.2.0"
description = "VIBE as native Python syntax — a fast single-header config language, compiled in"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "1ay1" }]
keywords = ["vibe", "config", "parser", "configuration", "native-extension"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/1ay1/vibe"
Repository = "https://github.com/1ay1/vibe"
Issues = "https://github.com/1ay1/vibe/issues"

[tool.setuptools]
py-modules = ["vibe"]
